src/core-crm/objects/Award_Recognition__c/Award_Recognition__c.object-meta.xml
<CustomObject>
    <description>Captures and relates internal and external awards and/or recognition to a Contact.</description>
    <label>Award Recognition</label>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Award Recognitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>