src/core-crm/objects/Award_Recognition__c/fields/Recognition_Comment__c.field-meta.xml
<CustomField>
    <fullName>Recognition_Comment__c</fullName>
    <description>Business-user comment about the award or recognition.</description>
    <inlineHelpText>Business-user comment about the award or recognition.</inlineHelpText>
    <label>Recognition Comment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>