src/core-crm/objects/Award_Recognition__c/fields/Recognition_Date__c.field-meta.xml
<CustomField>
    <fullName>Recognition_Date__c</fullName>
    <description>The date the award or recognition is acknowledged.</description>
    <inlineHelpText>The date the award or recognition is acknowledged.</inlineHelpText>
    <label>Recognition Date</label>
    <type>Date</type>
</CustomField>