src/core-crm/objects/Award_Recognition__c/fields/Recognition_Type__c.field-meta.xml
<CustomField>
    <fullName>Recognition_Type__c</fullName>
    <description>Indicates if the award or recognition is bestowed by QUT (internal) or externally.</description>
    <inlineHelpText>Indicates if the award or recognition is bestowed by QUT (internal) or externally</inlineHelpText>
    <label>Recognition Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>